tests/nightly/misc/compile_fail/missing_reason.stderr
error: you need to specify a reason why this precondition holds
 --> $DIR/missing_reason.rs:8:14
  |
8 |     #[assure("must be bar")]
  |              ^^^^^^^^^^^^^
  |
help: add `, reason = "<specify the reason why you can assure this here>"`
 --> $DIR/missing_reason.rs:8:27
  |
8 |     #[assure("must be bar")]
  |                           ^
